force-app/main/default/objects/Customer_Health__c/Customer_Health__c.object-meta.xml
<CustomObject>
    <description>Custom Object to primarily store churn prevention data of companies.</description>
    <label>Customer Health</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Customer Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Health</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>