force-app/main/default/objects/Customer_Health__c/fields/First_Upgrade_Feature__c.field-meta.xml
<CustomField>
    <fullName>First_Upgrade_Feature__c</fullName>
    <description>The feature that is the biggest driver increasing the probability of the customer belonging on a higher tier.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>1st Upgrade Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>