force-app/main/default/objects/Customer_Health__c/fields/Next_Issue_Predictor__c.field-meta.xml
<CustomField>
    <fullName>Next_Issue_Predictor__c</fullName>
    <description>Likelihood customer will have an issue</description>
    <label>Next Issue Predictor</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>