force-app/main/default/objects/Customer_Health__c/fields/Retry_Process_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Process_Count__c</fullName>
    <description>Indicates how many times record was re-processed after Processing State is updated to Error.</description>
    <inlineHelpText>Retry Process Count indicates how many times record was re-processed after Processing State is updated to Error.</inlineHelpText>
    <label>Retry Process Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>